Updates and fixes spacing with project pages.

--- a/project-evolment/styles/evolment.css
+++ b/project-evolment/styles/evolment.css
@@ -106,7 +106,7 @@
 }
 
 section {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid black;
 
     width: 100%;
@@ -119,21 +119,38 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5vh;
+    gap: 1vh;
 }
+.info-desc-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
 
+}
 #description-section {
     display: flex;
     flex-direction: column;
     gap: 5vh;
+    justify-content: left;
+}
+#description-section p{
+    text-align: center;
 }
 
+.desc-em1 {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.desc-em2{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 section p {
     margin: 0 4vw;
-}
-
-#description-section {
-    justify-content: left;
+    font-weight: bold;
 }
 
 .team-member {
@@ -258,20 +275,22 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* Minimum width for laptops. */
 @media all and (min-width: 769px) {
-    .container{
+    .container                  {
         display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-        grid-template-rows: 25% 25% 25% 25%;
+        grid-template-columns: 25% 25% 1% 49%;
+        grid-template-rows: 20% 20% 20% 20% 20%;
         gap: 0;
 
         height: 90vh;
+        width: 90vw;
     }
     #button-container{
-
+        grid-row: 1 / span 1;
+        margin: 0;
     }
     #display-container{
         grid-column: 1 / span 2;
-        grid-row: 1 / span 3;
+        grid-row: 2 / span 3;
 
         height: 100%;
     }
@@ -280,32 +299,58 @@ You can adjust the min-width numbers below, and add as many new media queries as
         width: 25%;
         padding: 2rem;
     }
+
+    .info-desc-container{
+        grid-column: 4 / span 2;
+        grid-row: 1 / span 5;
+        width: 100%;
+        height: 100%;
+        
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 20%;
+    }
     #description-section{
-        grid-column: 3 / span 1;
+        grid-column: 1 / span 1;
         grid-row: 1 / span 2;
-        padding: 1rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .desc-em1{
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: bolder;
+    }
+    .desc-em2{
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        margin-bottom: 0.5rem;
     }
     #description-section p{
-        margin: 0;
+        margin: 0 5%;
     }
     #dev-date-info{
-        grid-column: 4 / span 1;        
-        grid-row: 1 / span 2;
+        grid-column: 2 / span 1;
+        grid-row: 1 / span 1;
         margin: 0;
     }
     #purpose-info{
-        grid-column: 4 / span 1;        
+        grid-column: 2 / span 1;
         grid-row: 2 / span 1;
-
     }
     #team-info{
-        grid-column: 3 / span 2;
-        grid-row: 3 / span 3;
+        grid-column: 1 / span 2;
+        grid-row: 3 / span 2;
+        padding: 0;
     }
     
     .info-section {
         gap: 0;
         height: auto;
+        width: 100%;
     }
     section{
         width: 80%;
