--- a/project-paint/styles/paint.css
+++ b/project-paint/styles/paint.css
@@ -1,10 +1,9 @@
-:root{
+:root {
     --background-imagery: url(../../Assets/paint-2.png);
 }
-*{
+
+* {
     margin: 0;
-}
-body {
 }
 
 #background-overlay {
@@ -20,7 +19,8 @@ body {
     top: 0;
 
     width: 100%;
-    height: calc(1vh * 100); /* 100% of dynamic viewport height */
+    height: calc(1vh * 100);
+    /* 100% of dynamic viewport height */
 
     filter: blur(0.75px);
 }
@@ -73,14 +73,14 @@ body {
     border: 3px solid white;
 }
 
-
-.slide{
+.slide {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.prev, .next {
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -93,13 +93,17 @@ body {
     font-size: 2rem;
     font-weight: bold;
 }
+
 .next {
     right: 0;
 }
-.prev{
+
+.prev {
     left: 0;
 }
-.prev:hover, .next:hover {
+
+.prev:hover,
+.next:hover {
     background-color: darkgray;
 }
 
@@ -109,7 +113,7 @@ body {
 }
 
 section {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid black;
 
     width: 100%;
@@ -122,22 +126,40 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5vh;
+    gap: 1vh;
+}
+
+.info-desc-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
 }
 
 #description-section {
     display: flex;
     flex-direction: column;
     gap: 5vh;
+    justify-content: left;
+}
+#description-section p{
+    text-align: center;
+}
+
+.desc-em1{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.desc-em2{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 section p {
     margin: 0 4vw;
-}
-
-
-#description-section {
-    justify-content: left;
+    font-weight: bold;
 }
 
 .team-member {
@@ -146,6 +168,7 @@ section p {
     justify-content: center;
     align-items: center;
 }
+
 .team-member h3 {
     border-bottom: solid 2px black;
 }
@@ -157,89 +180,101 @@ section p {
     margin-top: 0.5rem;
 }
 
-.icon{
+
+/* || Icons */
+.icon {
     width: 1rem;
     height: 1rem;
 
     padding: 1rem;
 
-    background-size:contain;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
-/* Icons */
-.instagram-icon{
+.instagram-icon {
     background-image: url("../../Assets/Icons/instagram-icon.png");
 }
-.itch-icon{
+
+.itch-icon {
     background-image: url("../../Assets/Icons/itch-icon.png");
 }
-.facebook-icon{
+
+.facebook-icon {
     background-image: url("../../Assets/Icons/facebook-icon.png");
     min-width: 16px;
     min-height: 16px;
 }
-.linkedin-icon{
+
+.linkedin-icon {
     background-image: url("../../Assets/Icons/linkedin-icon.png");
     background-size: cover;
     background-color: white;
     border-radius: 5px;
 }
-.website-icon{
+
+.website-icon {
     background-image: url("../../Assets/Icons/website-icon.png");
 }
-.artstation-icon{
+
+.artstation-icon {
     background-image: url("../../Assets/Icons/artstation-icon.png");
     background-size: cover;
 }
-.x-icon{
+
+.x-icon {
     background-image: url("../../Assets/Icons/x-icon.png");
 }
 
 /* || Footer */
-footer{
-  background-color: black;
-  color: white;
-  padding: 5vh 3vw 5vh 3vw;
-}
-footer a{
-  color: lightblue;
-}
-.footer-nav{
-  display: flex;
-  flex-direction: row;
-
-  border-top: solid 2px white;
-  margin: 5% 0;
+footer {
+    background-color: black;
+    color: white;
+    padding: 5vh 3vw 5vh 3vw;
 }
 
-.footer-container{
-  display: flex;
-  flex-direction: column;
-  
-  margin: 0 2%;
-  width: 100%;
-  height: 100%;
-}
-.footer-container h3{
-  margin: 1vh 0;
+footer a {
+    color: lightblue;
 }
 
-#footer-border{
-  border-left: solid 2px white;
-  margin: 0 3vw;
+.footer-nav {
+    display: flex;
+    flex-direction: row;
+
+    border-top: solid 2px white;
+    margin: 5% 0;
 }
 
-.footer-projects-list{
-  list-style-position: inside;
-  padding: 0;
+.footer-container {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 2%;
+    width: 100%;
+    height: 100%;
 }
-footer li{
-  list-style-type: disc;
-  padding-left: 0;
+
+.footer-container h3 {
+    margin: 1vh 0;
 }
-footer li:first-child{
-  list-style-type: none;
+
+#footer-border {
+    border-left: solid 2px white;
+    margin: 0 3vw;
+}
+
+.footer-projects-list {
+    list-style-position: inside;
+    padding: 0;
+}
+
+footer li {
+    list-style-type: disc;
+    padding-left: 0;
+}
+
+footer li:first-child {
+    list-style-type: none;
 }
 
 .social-media-container {
@@ -248,3 +283,119 @@ footer li:first-child{
     gap: 2vw;
     margin-top: 5%;
 }
+
+/* ========================================
+MEDIA QUERIES!
+You can adjust the min-width numbers below, and add as many new media queries as you need.
+======================================== */
+
+/* Minimum width for iPads and tablets.  */
+@media all and (min-width: 481px) {}
+
+/* closes 481px+ */
+
+
+
+/* Minimum width for laptops. */
+@media all and (min-width: 769px) {
+    .container {
+        display: grid;
+        grid-template-columns: 25% 25% 1% 49%;
+        grid-template-rows: 20% 20% 20% 20% 20%;
+        gap: 0;
+
+        height: 90vh;
+        width: 90vw;
+    }
+
+    #button-container {
+        grid-row: 1 / span 1;
+        margin: 0;
+    }
+
+    #display-container {
+        grid-column: 1 / span 2;
+        grid-row: 2 / span 3;
+
+        height: 100%;
+    }
+
+    #play-btn {
+        grid-column: 1 / span 2;
+        width: 25%;
+        padding: 2rem;
+    }
+
+    .info-desc-container {
+        grid-column: 4 / span 2;
+        grid-row: 1 / span 5;
+        width: 100%;
+        height: 100%;
+
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 20%;
+    }
+
+    #description-section {
+        grid-column: 1 / span 1;
+        grid-row: 1 / span 2;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .desc-em1{
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: bolder;
+    }
+    .desc-em2{
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        margin-bottom: 0.5rem;
+    }
+
+    #description-section p {
+        margin: 0 5%;
+    }
+
+    #dev-date-info {
+        grid-column: 2 / span 1;
+        grid-row: 1 / span 1;
+        margin: 0;
+    }
+
+    #purpose-info {
+        grid-column: 2 / span 1;
+        grid-row: 2 / span 1;
+    }
+
+    #team-info {
+        grid-column: 1 / span 2;
+        grid-row: 3 / span 2;
+        padding: 0;
+    }
+
+    .info-section {
+        gap: 0;
+        height: auto;
+        width: 100%;
+    }
+
+    section {
+        width: 80%;
+    }
+
+}
+
+/* closes 769px+ */
+
+
+
+/* Minimum width for desktop screens. */
+@media all and (min-width: 1024px) {}
+
+/* closes 1024px+ */
